deploy: 8b857f8391f1c2bca6abbe08a17e59c8b2cc11cf

--- a/classes.html
+++ b/classes.html
@@ -23,6 +23,7 @@
   <td id="projectalign">
    <div id="projectname">readWDpp
    </div>
+   <div id="projectbrief">Read binary files from DRS and WDB</div>
   </td>
  </tr>
  </tbody>
