--- a/dir_49e56c817e5e54854c35e136979f97ca.html
+++ b/dir_49e56c817e5e54854c35e136979f97ca.html
@@ -23,6 +23,7 @@
   <td id="projectalign">
    <div id="projectname">readWDpp
    </div>
+   <div id="projectbrief">Read binary files from DRS and WDB</div>
   </td>
  </tr>
  </tbody>
