--- a/main0_8cc-example.html
+++ b/main0_8cc-example.html
@@ -98,7 +98,7 @@ $(function() {
 <div class="line">    file.<a id="a2" name="a2"></a>Initialise(event);</div>
 <div class="line">    <span class="keywordflow">while</span>(file &gt;&gt; event)</div>
 <div class="line">    {</div>
-<div class="line">        <span class="keyword">auto</span> pedestal = <span class="keyword">event</span>.GetChannel(<span class="stringliteral">&quot;B#2440&quot;</span>, <span class="stringliteral">&quot;C001&quot;</span>).GetPedestal();</div>
+<div class="line">        <span class="keyword">auto</span> pedestal = <span class="keyword">event</span>.GetChannel(0, 0).GetPedestal();</div>
 <div class="line">        h1-&gt;Fill(pedestal.first);</div>
 <div class="line">        h2-&gt;Fill(pedestal.second);</div>
 <div class="line">    }</div>
@@ -111,8 +111,8 @@ $(function() {
 <div class="line">{</div>
 <div class="line">    main();</div>
 <div class="line">}</div>
-<div class="ttc" id="aclassDAQFile_html"><div class="ttname"><a href="classDAQFile.html">DAQFile</a></div><div class="ttdoc">Class to manage the file and the outputing of data in a DAQEvent instance.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00127">readWD.hh:128</a></div></div>
-<div class="ttc" id="aclassDRSEvent_html"><div class="ttname"><a href="classDRSEvent.html">DRSEvent</a></div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00115">readWD.hh:116</a></div></div>
+<div class="ttc" id="aclassDAQFile_html"><div class="ttname"><a href="classDAQFile.html">DAQFile</a></div><div class="ttdoc">Class to manage the file and the outputing of data in a DAQEvent instance.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00114">readWD.hh:115</a></div></div>
+<div class="ttc" id="aclassDRSEvent_html"><div class="ttname"><a href="classDRSEvent.html">DRSEvent</a></div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00102">readWD.hh:103</a></div></div>
 </div><!-- fragment --> </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
