--- a/main0_8cc-example.html
+++ b/main0_8cc-example.html
@@ -89,13 +89,16 @@ $(function() {
 <div class="line">{</div>
 <div class="line">    <a id="_a0" name="_a0"></a><a class="code hl_class" href="classDAQFile.html">DAQFile</a> file(<span class="stringliteral">&quot;test/testDRS.dat&quot;</span>);</div>
 <div class="line">    <a id="_a1" name="_a1"></a><a class="code hl_class" href="classDRSEvent.html">DRSEvent</a> event;</div>
+<div class="line"> </div>
+<div class="line">    <span class="keyword">event</span>.<a id="a2" name="a2"></a>SetPedInterval(100, 2000);</div>
+<div class="line"> </div>
 <div class="line">    TH1F *h1 = <span class="keyword">new</span> TH1F(<span class="stringliteral">&quot;Pedestal mean&quot;</span>, <span class="stringliteral">&quot;h1&quot;</span>, 100, -0.002, 0.004);</div>
 <div class="line">    TH1F *h2 = <span class="keyword">new</span> TH1F(<span class="stringliteral">&quot;Pedestal std.dev.&quot;</span>, <span class="stringliteral">&quot;h2&quot;</span>, 100, -0.002, 0.004);</div>
 <div class="line"> </div>
 <div class="line">    h1-&gt;SetLineColor(kRed);</div>
 <div class="line">    h2-&gt;SetLineColor(kGreen);</div>
 <div class="line"> </div>
-<div class="line">    file.<a id="a2" name="a2"></a>Initialise(event);</div>
+<div class="line">    file.<a id="a3" name="a3"></a>Initialise(event);</div>
 <div class="line">    <span class="keywordflow">while</span> (file &gt;&gt; event)</div>
 <div class="line">    {</div>
 <div class="line">        <span class="keyword">auto</span> pedestal = <span class="keyword">event</span>.GetChannel(0, 0).GetPedestal();</div>
@@ -111,8 +114,8 @@ $(function() {
 <div class="line">{</div>
 <div class="line">    main();</div>
 <div class="line">}</div>
-<div class="ttc" id="aclassDAQFile_html"><div class="ttname"><a href="classDAQFile.html">DAQFile</a></div><div class="ttdoc">Class to manage the file and the outputing of data in a DAQEvent instance.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00115">readWD.hh:116</a></div></div>
-<div class="ttc" id="aclassDRSEvent_html"><div class="ttname"><a href="classDRSEvent.html">DRSEvent</a></div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00103">readWD.hh:104</a></div></div>
+<div class="ttc" id="aclassDAQFile_html"><div class="ttname"><a href="classDAQFile.html">DAQFile</a></div><div class="ttdoc">Class to manage the file and the outputing of data in a DAQEvent instance.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00116">readWD.hh:117</a></div></div>
+<div class="ttc" id="aclassDRSEvent_html"><div class="ttname"><a href="classDRSEvent.html">DRSEvent</a></div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00104">readWD.hh:105</a></div></div>
 </div><!-- fragment --> </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
