--- a/main0_8cc-example.html
+++ b/main0_8cc-example.html
@@ -87,7 +87,7 @@ $(function() {
 <div class="line"> </div>
 <div class="line"><span class="keywordtype">int</span> main(<span class="keywordtype">void</span>)</div>
 <div class="line">{</div>
-<div class="line">    <a id="_a0" name="_a0"></a><a class="code hl_class" href="classDAQFile.html">DAQFile</a> file(<span class="stringliteral">&quot;test/testDRS.dat&quot;</span>);</div>
+<div class="line">    <a id="_a0" name="_a0"></a><a class="code hl_class" href="classDAQFile.html">DAQFile</a> file(<span class="stringliteral">&quot;data/testDRS.dat&quot;</span>);</div>
 <div class="line">    <a id="_a1" name="_a1"></a><a class="code hl_class" href="classDRSEvent.html">DRSEvent</a> event;</div>
 <div class="line"> </div>
 <div class="line">    TH1F *h1 = <span class="keyword">new</span> TH1F(<span class="stringliteral">&quot;Pedestal mean&quot;</span>, <span class="stringliteral">&quot;h1&quot;</span>, 100, -0.002, 0.004);</div>
@@ -113,7 +113,7 @@ $(function() {
 <div class="line">    main();</div>
 <div class="line">}</div>
 <div class="ttc" id="aclassDAQFile_html"><div class="ttname"><a href="classDAQFile.html">DAQFile</a></div><div class="ttdoc">Class to manage the file and the outputing of data in a DAQEvent instance.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00132">readWD.hh:133</a></div></div>
-<div class="ttc" id="aclassDAQFile_html_adf184c72d64312f62e4a1056a375bd69"><div class="ttname"><a href="classDAQFile.html#adf184c72d64312f62e4a1056a375bd69">DAQFile::Initialise</a></div><div class="ttdeci">DAQFile &amp; Initialise()</div><div class="ttdoc">Initialise the file reading the TIME block.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8cc_source.html#l00415">readWD.cc:415</a></div></div>
+<div class="ttc" id="aclassDAQFile_html_adf184c72d64312f62e4a1056a375bd69"><div class="ttname"><a href="classDAQFile.html#adf184c72d64312f62e4a1056a375bd69">DAQFile::Initialise</a></div><div class="ttdeci">DAQFile &amp; Initialise()</div><div class="ttdoc">Initialise the file reading the TIME block.</div><div class="ttdef"><b>Definition:</b> <a href="readWD_8cc_source.html#l00423">readWD.cc:423</a></div></div>
 <div class="ttc" id="aclassDRSEvent_html"><div class="ttname"><a href="classDRSEvent.html">DRSEvent</a></div><div class="ttdef"><b>Definition:</b> <a href="readWD_8hh_source.html#l00116">readWD.hh:117</a></div></div>
 </div><!-- fragment --> </div><!-- contents -->
 <!-- start footer part -->
