--- a/main3_8cc-example.html
+++ b/main3_8cc-example.html
@@ -88,6 +88,7 @@ $(function() {
 <div class="line"><span class="preprocessor">#include &quot;../readWD.hh&quot;</span></div>
 <div class="line"> </div>
 <div class="line"><span class="preprocessor">#include &quot;TApplication.h&quot;</span></div>
+<div class="line"><span class="preprocessor">#include &quot;TLegend.h&quot;</span></div>
 <div class="line"><span class="preprocessor">#include &quot;TCanvas.h&quot;</span></div>
 <div class="line"><span class="preprocessor">#include &quot;TH1F.h&quot;</span></div>
 <div class="line"> </div>
@@ -98,11 +99,10 @@ $(function() {
 <div class="line">    <a id="_a0" name="_a0"></a><a class="code hl_class" href="classDAQFile.html">DAQFile</a> file;</div>
 <div class="line">    <a id="_a1" name="_a1"></a><a class="code hl_class" href="classWDBEvent.html">WDBEvent</a> event;</div>
 <div class="line"> </div>
-<div class="line">    <span class="keywordtype">int</span> i = 0;</div>
-<div class="line"> </div>
 <div class="line">    <span class="keyword">auto</span> c0 = <span class="keyword">new</span> TCanvas(<span class="stringliteral">&quot;c0&quot;</span>, <span class="stringliteral">&quot;c0&quot;</span>, 1);</div>
 <div class="line">    <span class="keyword">auto</span> h0 = <span class="keyword">new</span> TH1F(<span class="stringliteral">&quot;ch01&quot;</span>, <span class="stringliteral">&quot;ch01&quot;</span>, 80, -0.07e-9, 0.07e-9);</div>
 <div class="line">    <span class="keyword">auto</span> h1 = <span class="keyword">new</span> TH1F(<span class="stringliteral">&quot;ch08&quot;</span>, <span class="stringliteral">&quot;ch08&quot;</span>, 80, -0.7e-9, 0.7e-9);</div>
+<div class="line">    <span class="keyword">auto</span> legend = <span class="keyword">new</span> TLegend();</div>
 <div class="line"> </div>
 <div class="line">    file.<a id="a2" name="a2"></a><a class="code hl_function" href="classDAQFile.html#a825bff86707cd65dcf2e625c25d85f96">Open</a>(<span class="stringliteral">&quot;data/split1-2at4GSPS&quot;</span>);</div>
 <div class="line">    file.<a id="a3" name="a3"></a><a class="code hl_function" href="classDAQFile.html#adf184c72d64312f62e4a1056a375bd69">Initialise</a>();</div>
@@ -116,14 +116,11 @@ $(function() {
 <div class="line">        {</div>
 <div class="line">            h0-&gt;Fill(times0[j] - times1[j]);</div>
 <div class="line">        }</div>
-<div class="line">        </div>
-<div class="line">        ++i;</div>
 <div class="line">    }</div>
 <div class="line"> </div>
 <div class="line">    file.<a id="a5" name="a5"></a><a class="code hl_function" href="classDAQFile.html#a8c817a643655e94d41b1cc7487a61d8d">Close</a>();</div>
 <div class="line">    file.<a class="code hl_function" href="classDAQFile.html#a825bff86707cd65dcf2e625c25d85f96">Open</a>(<span class="stringliteral">&quot;data/split1-8at4GSPS&quot;</span>);</div>
 <div class="line">    file.<a class="code hl_function" href="classDAQFile.html#adf184c72d64312f62e4a1056a375bd69">Initialise</a>();</div>
-<div class="line">    i = 0;</div>
 <div class="line"> </div>
 <div class="line">    <span class="keywordflow">while</span> (file &gt;&gt; event)</div>
 <div class="line">    {</div>
@@ -134,8 +131,6 @@ $(function() {
 <div class="line">        {</div>
 <div class="line">            h1-&gt;Fill(times0[j] - times8[j]);</div>
 <div class="line">        }</div>
-<div class="line"> </div>
-<div class="line">        ++i;</div>
 <div class="line">    }</div>
 <div class="line"> </div>
 <div class="line">    h1-&gt;SetTitle(<span class="stringliteral">&quot;Time resolution on same chip and on different chips&quot;</span>);</div>
@@ -148,6 +143,12 @@ $(function() {
 <div class="line">    h0-&gt;Draw(<span class="stringliteral">&quot;SAMES&quot;</span>);</div>
 <div class="line"> </div>
 <div class="line">    h1-&gt;GetYaxis()-&gt;SetRangeUser(0, 5.5e4);</div>
+<div class="line">    h1-&gt;GetXaxis()-&gt;SetTitle(<span class="stringliteral">&quot;Time [s]&quot;</span>);</div>
+<div class="line"> </div>
+<div class="line">    legend-&gt;AddEntry(h0, <span class="stringliteral">&quot;same chip&quot;</span>);</div>
+<div class="line">    legend-&gt;AddEntry(h1, <span class="stringliteral">&quot;different chip&quot;</span>);</div>
+<div class="line">    </div>
+<div class="line">    legend-&gt;Draw();</div>
 <div class="line">    c0-&gt;Update();</div>
 <div class="line"> </div>
 <div class="line">    <span class="keywordflow">return</span>;</div>
